Bug 427503 - Orion New UI Improvements - Fixed z-index for side menu transition

--- a/bundles/org.eclipse.orion.client.ui/web/css/layout.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/layout.css
@@ -446,6 +446,10 @@ hard-coded numbers elsewhere.
 	z-index: 100;
 }
 
+.sideMenu:hover{
+	z-index: 100;
+}
+
 .sideMenu-maximized {
 	top: 0;
 	bottom: 0;
